updates to check auth

--- a/ui/pages/app.templ
+++ b/ui/pages/app.templ
@@ -8,12 +8,15 @@ type AppParams struct {
 }
 
 templ App(params AppParams) {
+
 	@components.Base() {
+		@components.HomepageTopNav(false,false)
 		<div class="mt-8 px-8">
 			<h3>Login Info</h3>
 			<p>User email: { params.UserEmail }</p>
 			<h1>Add app contents here...</h1>
 		</div>
 		@components.AuthRefresh(params.AuthRefreshParams)
+		@components.HomepageFooter()
 	}
 }
