--- a/ui/components/homepage_top_nav.templ
+++ b/ui/components/homepage_top_nav.templ
@@ -1,10 +1,12 @@
 package components
 
-templ HomepageTopNav(showHomeItem bool) {
+templ HomepageTopNav(showHomeItem bool , loggedIn bool) {
 	<div class="w-screen h-fit px-4 py-4 flex flex-row-reverse gap-4 bg-blue-600">
+	 if !loggedIn {
 		<a class="font-bold text-xl text-stone-100 cursor-pointer" href="/login">Login</a>
-		if (showHomeItem) {
+	 }
+	if (showHomeItem) {
 			<a class="font-bold text-xl text-stone-100 cursor-pointer" href="/">Home</a>
-		}
+	}
 	</div>
 }
