--- a/ui/pages/homepage.templ
+++ b/ui/pages/homepage.templ
@@ -2,9 +2,9 @@ package pages
 
 import "github.com/alekLukanen/go-templ-htmx-example-app/ui/components"
 
-templ Homepage() {
+templ Homepage(loggedIn bool) {
 	@components.Base() {
-		@components.HomepageTopNav(false)
+		@components.HomepageTopNav(false,loggedIn)
 		<div class="w-screen h-fit pt-24 pb-32 bg-gradient-to-r from-slate-200 to-gray-200 flex flex-col">
 			<div class="mt-[5svh] ml-[5svh] w-fit">
 				<h1 class="text-4xl sm:text-4xl md:text-6xl lg:text-8xl text-stone-800 drop-shadow-md">go-templ-htmx-example-app</h1>
