--- a/ui/pages/signup.templ
+++ b/ui/pages/signup.templ
@@ -24,7 +24,7 @@ func (obj *SignupInputFormParams) FormAppearsValid() bool {
 
 templ SignupPage(params SignupInputFormParams) {
 	@components.Base() {
-		@components.HomepageTopNav(true)
+		@components.HomepageTopNav(true,false)
 		<div class="w-screen h-screen bg-gradient-to-r from-slate-200 to-gray-200">
 			<div class="w-screen h-screen flex justify-center items-center">
 				<div class="w-full h-fit sm:max-w-xs md:max-w-sm lg:max-w-sm">
